# HeadTracker

./: README.md
firmware/src/DIY_headtracker/: Config.h  DIY_headtracker.ino
gui/src/: firmware.h  trackersettings.cpp
gui/tests/: CMakeLists.txt  trackersettings_test.cpp
